hphp/test/quick/protected-magic-getter.php.expectf
string(4) "blah"
HipHop Fatal error: Cannot access protected property in %s/test/quick/protected-magic-getter.php on line 11
